// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateZodSchemas locale modes > mode both emits flat and delivery schemas plus flatten helpers 1`] = `
"/**
 * @generated by @xndrjs/contentful-to-zod
 * Do not edit manually.
 */

import { z } from "zod";

/** @generated from space locales snapshot */
export const ContentfulLocaleCodeSchema = z.enum(["en-US", "it-IT"]);
export type ContentfulLocaleCode = z.infer<typeof ContentfulLocaleCodeSchema>;

export const CONTENTFUL_LOCALE_CODES = ContentfulLocaleCodeSchema.options;
export const CONTENTFUL_DEFAULT_LOCALE = "en-US" as const;

export const ContentfulLocationSchema = z.object({ "lat": z.number(), "lon": z.number() });

export const ContentfulEntryLinkSchema = z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Entry"), "id": z.string() }) });

export const ContentfulAssetLinkSchema = z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Asset"), "id": z.string() }) });

export const BlogPostSchema = z.object({
  "title": z.string().max(256).nullable(),
  "slug": z.string().nullable(),
  "author": z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Entry"), "id": z.string() }) }).nullable().optional(),
  "excerpt": z.string().nullable().optional(),
});

export type BlogPostFields = z.infer<typeof BlogPostSchema>;

export const BlogPostDeliverySchema = z.object({
  "title": z.record(ContentfulLocaleCodeSchema, z.string().max(256)).nullable(),
  "slug": z.string().nullable(),
  "author": z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Entry"), "id": z.string() }) }).nullable().optional(),
  "excerpt": z.record(ContentfulLocaleCodeSchema, z.string()).nullable().optional(),
});

export type BlogPostDeliveryFields = z.infer<typeof BlogPostDeliverySchema>;


/** Read one locale from a localized delivery field; missing locale or null input → \`null\`. */
export function pickLocale<T>(
  value: Record<ContentfulLocaleCode, T> | null,
  locale: ContentfulLocaleCode = CONTENTFUL_DEFAULT_LOCALE,
): T | null {
  if (value === null) {
    return null;
  }
  return value[locale] ?? null;
}

/** Flatten \`BlogPostDeliveryFields\` to \`BlogPostFields\` for a single locale. */
export function flattenBlogPostFields(
  fields: BlogPostDeliveryFields,
  _locale: ContentfulLocaleCode = CONTENTFUL_DEFAULT_LOCALE,
): BlogPostFields {
  return {
    "title": pickLocale(fields.title ?? null, _locale),
    "slug": fields.slug,
    "author": fields.author,
    "excerpt": pickLocale(fields.excerpt ?? null, _locale),
  };
}
"
`;

exports[`generateZodSchemas locale modes > mode cma emits only flat schemas without locale primitives or helpers 1`] = `
"/**
 * @generated by @xndrjs/contentful-to-zod
 * Do not edit manually.
 */

import { z } from "zod";

export const ContentfulLocationSchema = z.object({ "lat": z.number(), "lon": z.number() });

export const ContentfulEntryLinkSchema = z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Entry"), "id": z.string() }) });

export const ContentfulAssetLinkSchema = z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Asset"), "id": z.string() }) });

export const BlogPostSchema = z.object({
  "title": z.string().max(256).nullable(),
  "slug": z.string().nullable(),
  "author": z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Entry"), "id": z.string() }) }).nullable().optional(),
  "excerpt": z.string().nullable().optional(),
});

export type BlogPostFields = z.infer<typeof BlogPostSchema>;
"
`;

exports[`generateZodSchemas locale modes > mode delivery emits delivery schemas and pickLocale without flatten helpers 1`] = `
"/**
 * @generated by @xndrjs/contentful-to-zod
 * Do not edit manually.
 */

import { z } from "zod";

/** @generated from space locales snapshot */
export const ContentfulLocaleCodeSchema = z.enum(["en-US", "it-IT"]);
export type ContentfulLocaleCode = z.infer<typeof ContentfulLocaleCodeSchema>;

export const CONTENTFUL_LOCALE_CODES = ContentfulLocaleCodeSchema.options;
export const CONTENTFUL_DEFAULT_LOCALE = "en-US" as const;

export const ContentfulLocationSchema = z.object({ "lat": z.number(), "lon": z.number() });

export const ContentfulEntryLinkSchema = z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Entry"), "id": z.string() }) });

export const ContentfulAssetLinkSchema = z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Asset"), "id": z.string() }) });

export const BlogPostDeliverySchema = z.object({
  "title": z.record(ContentfulLocaleCodeSchema, z.string().max(256)).nullable(),
  "slug": z.string().nullable(),
  "author": z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Entry"), "id": z.string() }) }).nullable().optional(),
  "excerpt": z.record(ContentfulLocaleCodeSchema, z.string()).nullable().optional(),
});

export type BlogPostDeliveryFields = z.infer<typeof BlogPostDeliverySchema>;


/** Read one locale from a localized delivery field; missing locale or null input → \`null\`. */
export function pickLocale<T>(
  value: Record<ContentfulLocaleCode, T> | null,
  locale: ContentfulLocaleCode = CONTENTFUL_DEFAULT_LOCALE,
): T | null {
  if (value === null) {
    return null;
  }
  return value[locale] ?? null;
}
"
`;
